Fixed too large mobile header

--- a/mdi-react/src/components/core/Header/Header.module.scss
+++ b/mdi-react/src/components/core/Header/Header.module.scss
@@ -309,15 +309,3 @@
     font-size: 1.25rem;
   }
 }
-
-@media only screen and (max-width: 500px) {
-  .desktopMobile {
-    height: 7rem;
-    .logo {
-      img {
-        height: 5.5rem;
-        width: auto;
-      }
-    }
-  }
-}
